syntax = "proto3";

package file;
option go_package = "./";

service GetHello {
    rpc HelloWorld (HelloWorldResponse) returns (HelloWorldResponse) {}
}

message HelloWorldResponse {
    string message = 1;
}